Changes for 1.2.7
* Dynamix AI patch, various small improvements and logic fixes. (wisconsin)

* New game property, "Low Luck for Technology", which will apply low luck rules to rolling for tech. (veqryn)

* Dynamix AI logging patch, should make logs easier to read. (wisconsin)

* Completely re-wrote NoPuDelegate, and re-wrote the Rules Attachment for productionPerXTerritories. Now looks like: <option name="productionPerXTerritories" value="infantry" count="2"/>, and you can have multiple instances of this. (veqryn)

* Small bug fix for Support attachments (squiddaddy), and a bug fix for the new placement logic. (veqryn)

* Dynamix AI patch, adding more features and improving some logic. (wisconsin)

* New Repair options. New unit attachment: <option name="repairsUnits" value="battleship:bunker"/> will cause the attached unit to repair units in the list. New game properties: "Battleships repair at beginning of round" and "Two HitPoint Units Require Repair Facilities". (veqryn)

* Created 2 new autosaves: autosave_round_even and autosave_round_odd, which will autosave at the beginning of each round. Provides only the last 2 rounds in order to keep file spam to a minimum. (veqryn)

* New Carrier-Fighter interleaver for AI casualty selection.  Another patch for Dynamix AI. (wisconsin)

* Fixed bug where the NoPuPurchase delegate was calling the normal Purchase delegate if the player had PUs left over, Resulting in the player getting multiple purchase screens. (veqryn)

* New game property, "Unit Placement Restrictions", and new Unit Attachment option, <option name="unitPlacementRestrictions" value="territory1:territory2"/>, prevent a unit or units from being placed in any given territory. (veqryn)

* Beginning work on Unit Placement Restrictions. (veqryn)

* Moore AI's casualty picking fixed to work with all maps, not just ww2vX maps. (veqryn)
