@@ -197,5 +197,6 @@ public interface Constants
   public static final String TWO_HIT_BATTLESHIPS_REPAIR_BEGINNING_OF_TURN = "Battleships repair at beginning of round";
   public static final String TWO_HITPOINT_UNITS_REQUIRE_REPAIR_FACILITIES = "Two HitPoint Units Require Repair Facilities";
   public static final String LL_TECH_ONLY = "Low Luck for Technology";
+  public static final String TRIGGERED_VICTORY = "Triggered Victory";
   
 }
